# dagger

./: feature2
core/integration/: directory_test.go
pkg/universe.dagger.io/x/contact@kjuulh.io/go-showcase/doesntwork/: doesnt-work.cue
pkg/universe.dagger.io/x/contact@kjuulh.io/go-showcase/works/: works.cue
sdk/rust/: Cargo.toml
sdk/rust/crates/dagger-bootstrap/: Cargo.toml
sdk/rust/crates/dagger-codegen/: Cargo.toml
sdk/rust/crates/dagger-codegen/src/rust/: functions.rs
sdk/rust/crates/dagger-sdk/: CHANGELOG.md  Cargo.toml
sdk/rust/crates/dagger-sdk/examples/caching/: main.rs
sdk/rust/crates/dagger-sdk/examples/multi-stage-build/: main.rs
sdk/rust/crates/dagger-sdk/examples/publish-the-application/: main.rs
sdk/rust/crates/dagger-sdk/src/: client.rs  gen.rs  querybuilder.rs
sdk/rust/crates/dagger-sdk/src/core/: cli_session.rs  engine.rs
sdk/rust/crates/dagger-sdk/tests/issues/: iss_5928.rs  mod.rs
