[package]
name = "dagger-codegen"
description = "dagger sdk codegen library"
version.workspace = true 
edition.workspace = true 
readme.workspace = true 
license-file.workspace = true 
authors.workspace = true 
repository.workspace = true 
publish = true

version.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dagger-sdk = { workspace = true }

eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

genco.workspace = true
convert_case.workspace = true
itertools.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
